fix(Comments): align

--- a/src/styles/components/comments/_comment.scss
+++ b/src/styles/components/comments/_comment.scss
@@ -192,6 +192,8 @@ $spacing: 121;
       }
 
       .c-comment__content {
+        justify-self: flex-end;
+
         &::after,
         &::before {
           right: 0;
